--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,17 +2,17 @@
 # handlers file for ansible-role-uwsgi
 
 - name: Start Emperor
-  systemd:
+  service:
     state: started
     name: emperor
 
 - name: Stop Emperor
-  systemd:
+  service:
     state: stopped
     name: emperor
 
 - name: Restart Emperor
-  systemd:
+  service:
     state: restarted
     name: emperor
 
