--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,11 +70,19 @@
 
 # uWSGI service setup
 
-- name: Deploy uWSGI Emperor service
+- name: Deploy uWSGI Emperor systemd service
   copy:
     src: emperor-systemd
     dest: /etc/systemd/system/emperor.service
     mode: '0644'
+  when: ansible_pkg_mgr == 'systemd'
+
+- name: Deploy uWSGI Emperor initd service
+  copy:
+    src: emperor-initd
+    dest: /etc/init.d/emperor
+    mode: '0744'
+  when: ansible_pkg_mgr == 'upstart'
 
 - name: Deploy uWSGI Emperor default script
   template:
